--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.scss
@@ -82,6 +82,11 @@
         &.type-linked-signal {
           background-color: var(--red-03);
         }
+
+        &.type-resource {
+          background-color: goldenrod;
+          color: black;
+        }
       }
     }
   }
