--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.scss
@@ -97,6 +97,14 @@
           background-color: var(--red-03);
         }
       }
+
+      .kind-resource {
+        background-color: goldenrod;
+
+        .header {
+          background-color: darkgoldenrod;
+        }
+      }
     }
   }
 
