--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
@@ -1,12 +1,9 @@
 <svg #component></svg>
 
 @let node = selectedNode();
-@let dataSource = this.dataSource();
-@if (node && dataSource && detailsVisible()) {
+@if (node && detailsVisible()) {
   <ng-signals-details
     [node]="node"
-    [dataSource]="dataSource"
-    [treeControl]="treeControl()"
     (gotoSource)="gotoSource($event)"
     (close)="detailsVisible.set(false)"
   />
