feat(devtools): visualization group expanding and collapsing; wip
As the title suggests.

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
@@ -1,4 +1,9 @@
-<svg #component></svg>
+<ng-signals-visualizer
+  [graph]="signalGraph.graph()"
+  [selectedNodeId]="selectedNodeId()"
+  [element]="signalGraph.element()"
+  (nodeClick)="onNodeClick($event)"
+/>
 
 @let node = selectedNode();
 @if (node && detailsVisible()) {
