--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.scss
@@ -45,9 +45,8 @@
 
   dl {
     display: grid;
-    grid-template-columns: 2.75rem auto;
-    column-gap: 0.25rem;
-    row-gap: 0.5rem;
+    grid-template-columns: minmax(2.75rem, auto) auto;
+    gap: 0.5rem;
     margin: 0;
     margin-top: 0.75rem;
 
@@ -84,7 +83,7 @@
         }
 
         &.type-resource {
-          background-color: goldenrod;
+          background-color: var(--yellow-02);
           color: black;
         }
       }
