--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.scss
@@ -47,7 +47,7 @@
           }
         }
 
-        &.group-node {
+        &.cluster-node {
           &::before {
             position: absolute;
             border-radius: 50%;
@@ -138,7 +138,7 @@
     }
   }
 
-  .visible-groups {
+  .visible-clusters {
     position: absolute;
     top: 10px;
     left: 10px;
