feat(devtools): add visual clusters to the signal graph
As the title suggests.

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.html
@@ -38,9 +38,9 @@
   }
 
   @if (cluster(); as cluster) {
-    <dt>Part of:</dt>
+    <dt>Compound of:</dt>
     <dd>{{cluster.name}}</dd>
-    <dt>Cluster type:</dt>
+    <dt>Compound type:</dt>
     <dd>
       <span [class]="TYPE_CLASS_MAP[cluster.type]" class="type">{{ cluster.type }}</span>
     </dd>
