--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.html
@@ -2,7 +2,7 @@
 
 @if (visibleClusters().length) {
   <div class="visible-clusters">
-    <p>Expanded clusters</p>
+    <p>Expanded nodes</p>
     @for (cluster of visibleClusters(); track cluster.id) {
       <button
         ng-button
