--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-visualizer/signals-visualizer.component.scss
@@ -17,6 +17,34 @@
         overflow: visible;
       }
 
+      .cluster {
+        rect {
+          fill: none;
+          stroke: var(--yellow-01);
+          stroke-width: 1px;
+          rx: 10;
+          ry: 10;
+        }
+
+        text {
+          fill: var(--color-text);
+          font-weight: 600;
+        }
+      }
+
+      .edge {
+        .path {
+          stroke: var(--gray-500);
+          fill: none;
+          stroke-width: 1px;
+          stroke-dasharray: 5, 5;
+        }
+
+        marker > path {
+          fill: var(--gray-500);
+        }
+      }
+
       .node-label {
         position: relative;
         box-sizing: border-box;
@@ -47,7 +75,7 @@
           }
         }
 
-        &.cluster-node {
+        &.cluster-child {
           &::before {
             position: absolute;
             border-radius: 50%;
@@ -140,8 +168,12 @@
 
   .visible-clusters {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0.2rem;
+    left: 0.2rem;
+    border-radius: 0.375rem;
+    padding: 0.25rem 0.375rem;
+    background-color: color-mix(in srgb, var(--color-background) 30%, transparent 70%);
+    backdrop-filter: blur(5px);
 
     p {
       @extend %body-bold-01;
