refactor(devtools): update terms in signal viz
As the title suggests.

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
@@ -3,7 +3,7 @@
   [selectedNodeId]="selectedNodeId()"
   [element]="signalGraph.element()"
   (nodeClick)="onNodeClick($event)"
-  (clusterHide)="detailsVisible.set(false)"
+  (clusterCollapse)="detailsVisible.set(false)"
 />
 
 @let node = selectedNode();
