--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-details.component.html
@@ -42,7 +42,7 @@
     <dd>{{cluster.name}}</dd>
     <dt>Compound type:</dt>
     <dd>
-      <span [class]="TYPE_CLASS_MAP[cluster.type]" class="type">{{ cluster.type }}</span>
+      <span [class]="CLUSTER_TYPE_CLASS_MAP[cluster.type]" class="type">{{ cluster.type }}</span>
     </dd>
   }
   @if (isSignalNode) {
