--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-tab.component.html
@@ -1,4 +1,5 @@
 <ng-signals-visualizer
+  #visualizer
   [graph]="signalGraph.graph()"
   [selectedNodeId]="selectedNodeId()"
   [element]="signalGraph.element()"
@@ -11,6 +12,7 @@
   <ng-signals-details
     [node]="node"
     (gotoSource)="gotoSource($event)"
+    (expandCluster)="expandCluster($event)"
     (close)="detailsVisible.set(false)"
   />
 }
