--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-value-tree/signals-value-tree.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/signals-view/signals-details/signals-value-tree/signals-value-tree.component.scss
@@ -4,6 +4,13 @@
   width: 200px;
   display: block;
   overflow-x: auto;
+  padding-inline: 0.5rem;
+  border-radius: 0.25rem;
+  margin-top: 0.75rem;
+  background: var(--nonary-contrast);
+  padding-block: 0.25rem;
+  scrollbar-width: thin;
+  scrollbar-color: var(--quaternary-contrast) transparent;
 
   /* FRAGILE */
   ::ng-deep {
@@ -23,7 +30,6 @@
   .non-expandable-node {
     display: flex;
     align-items: center;
-    gap: 0.25rem;
   }
 
   .expandable-node {
@@ -33,9 +39,9 @@
     cursor: pointer;
 
     mat-icon {
-      width: 16px;
-      height: 16px;
-      font-size: 16px;
+      width: 12px;
+      height: 12px;
+      font-size: 12px;
     }
   }
 
@@ -46,6 +52,7 @@
 
   .name {
     color: var(--color-tree-node-element-name);
+    margin-right: 0.25rem;
 
     &::after {
       content: ':';
