refactor(devtools): implement synced logger
Track the whole initialization process of the DevTools.

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
@@ -188,4 +188,8 @@
     <mat-icon class="menu-icon">bug_report</mat-icon>
     Issues
   </a>
+  <button mat-menu-item (click)="downloadLogs()">
+    <mat-icon class="menu-icon">file_save</mat-icon>
+    <span>Download logs (dev)</span>
+  </button>
 </mat-menu>
