feat(devtools): add if blocks to devtools
Note: Introduces a lot of code repetitions.

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/directive-forest/tree-node/tree-node.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/directive-forest/tree-node/tree-node.component.html
@@ -33,8 +33,9 @@
   }
 
   @let defer = node().defer;
+  @let ifNode = node().if;
 
-  @if (!defer && (!hydration || hydration.status !== 'dehydrated')) {
+  @if (!defer && !ifNode && (!hydration || hydration.status !== 'dehydrated')) {
     <!-- Shown/hidden via CSS -->
     <span class="console-reference trait"> == $ng0 </span>
   }
