--- a/devtools/src/app/demo-app/todo/home/todos.component.html
+++ b/devtools/src/app/demo-app/todo/home/todos.component.html
@@ -25,6 +25,9 @@
           (delete)="onDelete($event)"
           (update)="onChange($event)"
         />
+        @for (test of testArr; track $index) {
+          <p>{{ test }}</p>
+        }
       }
     </ul>
   </section>
