--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/directive-forest/tree-node/tree-node.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/directive-forest/tree-node/tree-node.component.html
@@ -32,27 +32,31 @@
     <span class="trait">OnPush</span>
   }
 
-  @let defer = node().defer;
+  @let block = node().controlFlowBlock;
 
-  @if (!defer && (!hydration || hydration.status !== 'dehydrated')) {
-    <!-- Shown/hidden via CSS -->
-    <span class="console-reference trait"> == $ng0 </span>
-  }
+  @if (BlockType.isDeferBlock(block)) {
+    @let defer = block;
 
-  @if (defer) {
-    @if (defer.renderedBlock && defer.renderedBlock !== 'defer') {
-      <span class="trait">(@{{ defer.renderedBlock }})</span>
-    } @else if (!defer.renderedBlock) {
-      <span class="trait">(non-rendered)</span>
+    @if (!defer && (!hydration || hydration.status !== 'dehydrated')) {
+      <!-- Shown/hidden via CSS -->
+      <span class="console-reference trait"> == $ng0 </span>
     }
-  }
 
-  @let forLoop = node().forLoop;
+    @if (defer) {
+      @if (defer.renderedBlock && defer.renderedBlock !== 'defer') {
+        <span class="trait">(@{{ defer.renderedBlock }})</span>
+      } @else if (!defer.renderedBlock) {
+        <span class="trait">(non-rendered)</span>
+      }
+    }
+  } @else if (BlockType.isForBlock(block)) {
+    @let forLoop = block;
 
-  @if (forLoop) {
-    <span class="trait">
-      ({{ forLoop.itemCount }} {{ forLoop.itemCount === 1 ? 'item' : 'items' }})
-    </span>
+    @if (forLoop) {
+      <span class="trait">
+        ({{ forLoop.items.length }} {{ forLoop.items.length === 1 ? 'item' : 'items' }})
+      </span>
+    }
   }
 
   @switch (hydration?.status) {
