--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/for-view/for-view.component.scss
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/for-view/for-view.component.scss
@@ -1,7 +1,7 @@
 @use '../../../../../styles/typography';
 
 .for-details {
-  padding: 8px 0 8px 12px;
+  padding: 0.5rem 0 0.5rem 0.75rem;
 
   .info-row {
     display: flex;
